tests/negative/nested_array_compound_plus_assign.far
fun main() -> i64 {
  a = [[1, 2]]
  a[0] += [3]
  return 0
}
